@@ -1,0 +1,86 @@
+%define name		resiprocate
+%define version		RESIP_VERSION
+%define release		RESIP_RELEASE
+%define prefix		%{_prefix}
+%define sysconfdir	%{_sysconfdir}
+
+Name:		%{name}
+Summary:	The reSIP library
+Version: 	%{version}
+Release: 	%{release}
+Copyright: 	The Vovida Software License
+Group:		System Environment/Libraries
+Source0: 	%{name}-%{version}.tar.gz
+URL:		http://www.resiprocate.org/
+Vendor:		The reSIP organization
+Packager:	Purple Communications LTD
+Provides:	%{name}-%{version}
+Docdir: 	%{_docdir}
+BuildRoot:	%{_tmppath}/%{name}-%{version}-root
+BuildRequires:	openssl
+Prereq:		/sbin/chkconfig
+
+%description
+The reSIP library is an implementation of SIP written in C++. It is
+fully compliant to the RFC 3261.
+
+
+%package devel
+Summary:	Development files for the reSIP library
+Group:          Development/Libraries
+Requires:       %{name} = %{version}
+
+%description devel
+The resip-devel package contains the header and object files necessary
+for Development files for the resip library.
+
+%package -n ares
+Summary:	The ares library
+Group:          Development/Libraries
+Version:	1.1.1
+
+%description -n ares
+This ares is an asynchronous resolver library. It is intended for
+applications which need to perform DNS queries without blocking, or
+need to perform multiple DNS queries in parallel.
+
+
+%prep
+%setup -q
+
+%build
+( cd contrib/ares && CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{prefix} --mandir=%{mandir} && make )
+CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%{prefix} --with-openssl --with-ares --with-shared-libs
+make
+
+%install
+make DESTDIR=$RPM_BUILD_ROOT install
+make DESTDIR=$RPM_BUILD_ROOT -C contrib/ares install
+strip -g -R .comment $RPM_BUILD_ROOT%{_libdir}/lib*.so.*.*
+strip -g -R .comment $RPM_BUILD_ROOT%{_libdir}/lib*.a
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files
+%defattr(644,root,root,755)
+%doc COPYING ChangeLog README
+%attr(755,root,root) %{_libdir}/libresip*.so.*.*
+%attr(755,root,root) %{_libdir}/libresip*.so.?
+
+%files devel
+%defattr(644,root,root,755)
+%attr(755,root,root) %{_libdir}/libresip*.la
+%attr(755,root,root) %{_libdir}/libresip*.so
+%attr(644,root,root) %{_libdir}/libresip*.a
+%{_includedir}/resiprocate
+
+%files -n ares
+%defattr(644,root,root,755)
+%attr(644,root,root) %{_libdir}/libares.a
+%{_includedir}/ares*.h
+%{_mandir}/man3/*
+
+%changelog
+* Wed Aug 13 2003 Wensong Zhang <wensong@purplecomm.com>
+- initial rpm build
